# oos-lab

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: cpcv.md  deflated_sharpe.md  haircut.md  overview.md  pbo.md  psr.md  sharpe.md  walk_forward.md
src/oos_lab/: __init__.py
src/oos_lab/cv/: __init__.py  cpcv.py  walk_forward.py
src/oos_lab/metrics/: __init__.py  deflated_sharpe.py  psr.py  returns.py  sharpe.py
src/oos_lab/overfit/: __init__.py  haircut.py  pbo.py
tests/: test_cpcv.py  test_deflated_sharpe.py  test_haircut.py  test_pbo.py  test_psr.py  test_sharpe.py  test_walk_forward.py
